Fix Nexus being cut off on home page

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,10 +18,6 @@ main {
     padding-top: 40px;
 }
 
-section {
-    overflow: hidden;
-}
-
 .main--full-width {
     max-width: 100%;
 }
